--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>This is a Header</h1>
-        <p>This a paragraph</p>
+        <p>This is a paragraph</p>
+        <p>This is a paragraph</p>
     </body>
 </html>
